--- a/client/src/styles/Project.scss
+++ b/client/src/styles/Project.scss
@@ -62,8 +62,12 @@ $completed: #17c700;
     }
     .All-projects-titles-items {
         margin: 0;
-        padding: 5px;
+        padding: 5px 0 5px 0;
         display: block;
         width: 100%;
+        
+    }
+    .All-projects-titles-items:hover {
+        background: linear-gradient(45deg, #0088ff, #8800ff);
     }
 }
