Dark mode! Just show all the tasks, quote only shows up on home page/projects page

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -1,5 +1,16 @@
 $completed: #17c700;
 
+html{
+  background: linear-gradient(90deg, #2a009d, #020094, #004488);
+  color: #dfdfdf;
+  // background-repeat: no-repeat;
+  // position: absolute;
+  // left: 0;
+  // right: 0;
+  // top: 0;
+  // bottom: 0;
+}
+
 .App {
   display: block;
   margin: 10px 20%;
