--- a/client/src/styles/Project.scss
+++ b/client/src/styles/Project.scss
@@ -55,6 +55,7 @@ $completed: #17c700;
         border-radius: 5px;
         padding: 0;
         margin: 5px;
+        background: #000;
         h2 {
             margin: 0;
             padding: 0;
