--- a/client/src/styles/Quote.scss
+++ b/client/src/styles/Quote.scss
@@ -2,8 +2,9 @@
     border: 1px solid #000;
     border-radius: 20px;
     color: #ddd;
-    position: fixed;
-    bottom: 5px;
+    // position: fixed;
+    // top: 3px;
+    margin: 20px 0;
     background: linear-gradient(90deg, blue, purple);
     padding: 5px;
 
