Updated name, from email, dark mode is darker, completed tasks are darker green. Added loading while waiting for data. Updated quote to show links automatically. All quotes now has link to subscribe page. Daily quotes actually go the right emails now.

--- a/client/src/styles/Quote.scss
+++ b/client/src/styles/Quote.scss
@@ -5,11 +5,12 @@
     // position: fixed;
     // top: 3px;
     margin: 20px 0;
-    background: linear-gradient(90deg, blue, purple);
+    background: linear-gradient(90deg, rgb(8, 0, 79), blue);
     padding: 5px;
 
 }
 #All-quotes-links {
     display: grid;
-    grid-template-columns: repeat(3, 33.33%);
+    grid-template-columns: repeat(2, 50%);
+    text-align: center;
 }
