--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -1,7 +1,7 @@
 $completed: #17c700;
 
 html{
-  background: linear-gradient(90deg, #2a009d, #020094, #004488);
+  background: linear-gradient(90deg, #10003a, #010030, #002244);
   color: #dfdfdf;
   // background-repeat: no-repeat;
   // position: absolute;
