--- a/client/src/styles/Tasks.scss
+++ b/client/src/styles/Tasks.scss
@@ -73,3 +73,9 @@ $completed: #0c6600;
         grid-template-columns: 100%;
       } 
 }
+.Category-container {
+    border: 2px solid #fff;
+    border-radius: 5px;
+    text-align: center;
+    margin: 10px 0;
+}
