--- a/client/src/styles/Tasks.scss
+++ b/client/src/styles/Tasks.scss
@@ -3,6 +3,7 @@ $completed: #0c6600;
     display: grid;
     grid-template-columns: 26px auto 26px;
     border-radius: 5px;
+
     margin: 5px 0;
     p {
         margin: 0;
@@ -68,14 +69,16 @@ $completed: #0c6600;
 }
 .Task-add-task-form {
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 80% 20%;
     @media only screen and (max-width: 500px){
         grid-template-columns: 100%;
-      } 
+      }
 }
 .Category-container {
     border: 2px solid #fff;
     border-radius: 5px;
-    text-align: center;
-    margin: 10px 0;
+    // text-align: center;
+    margin: 0px 0 30px 0;
+    overflow: scroll;
+    height: 400px;
 }
