--- a/client/src/styles/Tasks.scss
+++ b/client/src/styles/Tasks.scss
@@ -34,6 +34,12 @@ $completed: #0c6600;
     border: 1px solid #fdfdfd;
     margin: 1px;
 }
+.Task-delete-btn:hover {
+    background-color: red;
+}
+.delete:hover {
+    background-color: red;
+}
 .Task-complete-btn {
     width: 25px;
     height: 25px;
@@ -80,5 +86,5 @@ $completed: #0c6600;
     // text-align: center;
     margin: 0px 0 30px 0;
     overflow: scroll;
-    height: 400px;
+    height: 200px;
 }
