--- a/client/src/styles/Tasks.scss
+++ b/client/src/styles/Tasks.scss
@@ -86,5 +86,5 @@ $completed: #0c6600;
     // text-align: center;
     margin: 0px 0 30px 0;
     overflow: scroll;
-    height: 200px;
+    max-height: 400px;
 }
