Large design update. Some cleanup

--- a/client/src/styles/Nav.scss
+++ b/client/src/styles/Nav.scss
@@ -10,6 +10,7 @@ a{
 }
 .Site-Navigation {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     a {
         padding: 0 15px;
