--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -11,6 +11,9 @@ html{
   // bottom: 0;
 }
 
+.center{ 
+  text-align: center;
+}
 .App {
   display: block;
   margin: 10px 20%;
@@ -68,4 +71,49 @@ html{
 .quiet {
   font-size: 0.8em;
   color: #898989;
+}
+.input {
+  width: 99%;
+  padding: 10px 3px;
+  font-size: 1.1em;
+  border-radius: 5px;
+  border: 1px solid #fff;
+  background-color: #fff2;
+  color: #fff;
+}
+.float {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  div {
+    float: right;
+  }
+}
+.btn {
+  padding: 10px;
+  background-color: #fff2;
+  color: #fff;
+  border-radius: 5px;
+  border: 1px solid #fff;
+  font-weight: 700;
+  font-size: large;
+  cursor: pointer;
+}
+.btn-action {
+  background-color: #05c5ff;
+  color: #000;
+  // padding: 10px 20px;
+  width: 75px;
+  min-width: max-content;
+  // height: 30px;
+  margin: 5px auto;
+  // text-align: center;
+  display: block;
+}
+.jumbo {
+  margin: 20px 0;
+  padding: 25px;
+  font-size: 1.3em;
+  background: linear-gradient(45deg, #05c5ff33, #03b18333);
+  border-radius: 5px;
 }
