--- a/client/src/styles/Project.scss
+++ b/client/src/styles/Project.scss
@@ -1,15 +1,21 @@
 $completed: #17c700;
 .Project-header {
-    display: grid;
-    grid-template-columns: 40% 60%;
+    display: flex;
+    // grid-template-columns: 40% 60%;
+    justify-content: space-between;
     align-items: center;
     h1 {
         margin: 10px 0;
     }
+    #add-category {
+        display: flex;
+        align-self: flex-end;
+        width: 100%;
+    }
 }
 .Project-settings {
     text-align: right;
-    background: linear-gradient(45deg, #3af, rgba(115, 23, 235, 0.89));
+    // background: linear-gradient(45deg, #3af, rgba(115, 23, 235, 0.89));
     width: max-content;
     margin: 5px 0 0 auto;
     padding: 1px;
@@ -51,11 +57,11 @@ $completed: #17c700;
     margin: 0 0 5px 0;
     
     .All-projects-titles-items-container {
-        border: 1px solid #000;
+        border: 1px solid #fff;
         border-radius: 5px;
         padding: 0;
         margin: 5px;
-        background: #000;
+        background: #fff2;
         h2 {
             margin: 0;
             padding: 0;
@@ -63,12 +69,17 @@ $completed: #17c700;
     }
     .All-projects-titles-items {
         margin: 0;
-        padding: 5px 0 5px 0;
+        padding: 10px 0;
         display: block;
         width: 100%;
         
     }
     .All-projects-titles-items:hover {
-        background: linear-gradient(45deg, #0088ff, #8800ff);
+        background: linear-gradient(45deg, #0088ff55, #8800ff55);
+    }
+}
+@media screen and(max-width: 500px) {
+    .All-projects-titles-container {
+        grid-template-columns: 100%;
     }
 }
