🔨 tweaked the landing page, nav

--- a/client/src/styles/Landing.scss
+++ b/client/src/styles/Landing.scss
@@ -6,6 +6,7 @@
     align-content: center;
     align-items: center;
     font-size: 2em;
+    text-align: center;
 }
 // .scene-1 {
 //     display: flex;
